UtahLiveDataTest/src/objects/ChangeRequestDetail__c.object
<CustomObject>
    <description>[Business] Identifies the forms released for change request</description>
    <fields>
        <fullName>ChangeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>ChangeRequest__c</referenceTo>
        <relationshipName>ChangeRequestDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Released for Change</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Change_Request_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PageBlockConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Block Released for Change</label>
        <referenceTo>GNT__PageBlockConfig__c</referenceTo>
        <relationshipLabel>Negotiation Request Detail</relationshipLabel>
        <relationshipName>Negotiation_Request_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageTabConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tab Released for Change</label>
        <referenceTo>GNT__TabConfig__c</referenceTo>
        <relationshipLabel>Negotiation Request Detail</relationshipLabel>
        <relationshipName>Negotiation_Request_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Negotiation Request Detail</label>
    <nameField>
        <displayFormat>CRD-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiation Request Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>